--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Rose Sponseller Portfolio</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Navbar brand -->
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-sunglasses glyphicon-2x" aria-hidden="true"></span> Rose Sponseller</a>
+      </div>
+      <!-- Right side of navbar -->
+        <ul class="nav navbar-nav navbar-right">
+          <li><a class="nav-link" href="#"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+          <li><a class="nav-link" href="#"><i class="fa fa-github fa-2x"></i></a></li>
+          <li><a class="nav-link" href="#"><i class="fa fa-ravelry fa-2x"></i></a></li>
+        </ul>
+      </div> <!--Container close -->
+    </nav>
+    <!-- <div class="container">
+      <div class="row">
+
+      </div>
+    </div> -->
   </body>
 </html>
