Add Jumbotron and structure

--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@
       </div>
       <!-- Right side of navbar -->
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="nav-link" href="#"><i class="fa fa-envelope-o fa-2x"></i></a></li>
-          <li><a class="nav-link" href="#"><i class="fa fa-github fa-2x"></i></a></li>
-          <li><a class="nav-link" href="#"><i class="fa fa-ravelry fa-2x"></i></a></li>
+          <li><a class="nav-link" href="mailto:rosesponseller@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://github.com/avocadobravado"><i class="fa fa-github fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.ravelry.com/people/rosesponseller"><i class="fa fa-ravelry fa-2x"></i></a></li>
         </ul>
       </div> <!--Container close -->
     </nav>
+    <!--Jumbotron-->
+    <div class="jumbotron">
+      <div class="container">
+        <div class="col-lg-8 col-md-6 col-sm-12">
+          <h1>Hi, I'm Rose.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div> <!-- Column close -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img src="img/rose.jpg" alt="Rose Sponseller" class="rosePortrait">
+        </div> <!-- Column close -->
+      </div> <!-- Container close -->
+    </div> <!-- Jumbotron close -->
     <!-- <div class="container">
       <div class="row">
 
