Add structure for Projects

--- a/index.html
+++ b/index.html
@@ -12,32 +12,48 @@
     <div class="container-fluid">
       <!-- Navbar brand -->
       <div class="navbar-header">
-        <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-sunglasses glyphicon-2x" aria-hidden="true"></span> Rose Sponseller</a>
+        <a href="#" class="navbar-brand"><i class="fa fa-hand-spock-o fa-2x"></i> Rose Sponseller</a>
       </div>
       <!-- Right side of navbar -->
         <ul class="nav navbar-nav navbar-right">
           <li><a class="nav-link" href="mailto:rosesponseller@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
           <li><a class="nav-link" href="http://github.com/avocadobravado"><i class="fa fa-github fa-2x"></i></a></li>
           <li><a class="nav-link" href="http://www.ravelry.com/people/rosesponseller"><i class="fa fa-ravelry fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.instagram.com/rosesponseller"><i class="fa fa-instagram fa-2x"></i></a></li>
         </ul>
       </div> <!--Container close -->
     </nav>
+
     <!--Jumbotron-->
     <div class="jumbotron">
       <div class="container">
-        <div class="col-lg-8 col-md-6 col-sm-12">
-          <h1>Hi, I'm Rose.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div> <!-- Column close -->
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="img/rose.jpg" alt="Rose Sponseller" class="rosePortrait">
-        </div> <!-- Column close -->
+        <div class="row">
+          <div class="col-lg-8 col-md-6 col-sm-12">
+            <h1>Hi, I'm Rose.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div> <!-- Column close -->
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="img/rose.jpg" alt="Rose Sponseller" class="rosePortrait">
+          </div> <!-- Column close -->
+        </div><!-- Row close -->
       </div> <!-- Container close -->
     </div> <!-- Jumbotron close -->
-    <!-- <div class="container">
-      <div class="row">
 
-      </div>
-    </div> -->
+    <!-- Panel -->
+    <div class="container">
+    <h2 class="secondary">Week One Projects</h2>
+      <div class="row">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div> <!-- Column close -->
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div> <!-- Column close -->
+          </div> <!-- Panel body -->
+        </div> <!-- Panel close -->
+      </div> <!-- Row close -->
+    </div> <!--Container close -->
   </body>
 </html>
