--- a/index.html
+++ b/index.html
@@ -47,31 +47,29 @@
           <div class="panel-body">
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project Name</h3>
+              <h3>Project 1</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project Name</h3>
+              <h3>Project 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project Name</h3>
+              <h3>Project 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
-              <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project Name</h3>
+              <h3>Project 4</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
-              <hr>
             </div> <!-- Column close -->
           </div> <!-- Panel body -->
         </div> <!-- Panel close -->
