--- a/index.html
+++ b/index.html
@@ -75,5 +75,40 @@
         </div> <!-- Panel close -->
       </div> <!-- Row close -->
     </div> <!--Container close -->
+
+    <!-- Background panel -->
+    <div class="container">
+    <h2 class="secondary">My Background</h2>
+      <div class="row">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="col-lg-12">
+            <!-- Work experience -->
+              <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-briefcase"></i></span> Work Experience</h3>
+              <h4 class="backgroundInfo">Squarespace — Technical Support<span class="backgroundDate">2015-2017</span></h4>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <hr>
+              <h4 class="backgroundInfo">Freelance Graphic Design<span class="backgroundDate">2013-present</span></h4>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <hr>
+            </div> <!-- Column close -->
+          <!-- Education -->
+            <div class="col-lg-12">
+              <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-graduation-cap"></i></span> Education</h3>
+              <h4 class="backgroundInfo">Epicodus — Front End Development<span class="backgroundDate">2015-2017</span></h4>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <hr>
+              <h4 class="backgroundInfo">University of Michigan — B.A. in Arabic and Islamic Studies<span class="backgroundDate">2005-2009</span></h4>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <hr>
+            </div> <!-- Column close -->
+          </div> <!-- Panel body -->
+        </div> <!-- Panel close -->
+      </div> <!-- Row close -->
+    </div> <!--Container close -->
   </body>
 </html>
