Tweak stylings to Background panel and add correct info to Education section

--- a/index.html
+++ b/index.html
@@ -85,26 +85,34 @@
             <div class="col-lg-12">
             <!-- Work experience -->
               <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-briefcase"></i></span> Work Experience</h3>
-              <h4 class="backgroundInfo">Squarespace — Technical Support<span class="backgroundDate">2015-2017</span></h4>
-              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <h4 class="backgroundInfo">Squarespace - Technical Support<span class="backgroundDate">2015-2017</span></h4>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>
+              <ol>
+                <li>Provided high level of technical support and web design assistance via email and concurrent  chats.</li>
+                <li>Assisted customers in a wide range of topics (website set up, domain management, HTML, CSS, RSS, SEO, typography, custom email, third party customizations)</li>
+                <li>Empowered customers with tools and expertise as they built confidence in using the product</li>
+              </ol>
+              <p><span class="techUsed">Tools and technology used: </span><span class="techDesc">Squarespace, Chrome Developer Tools, HTML/CSS, CloudApp, Typinator, JIRA</span></p>
               <hr>
               <h4 class="backgroundInfo">Freelance Graphic Design<span class="backgroundDate">2013-present</span></h4>
-              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg">
+              <ol>
+                <li>Create mockups for print and web projects to present to clients in a timely and friendly fashion</li>
+                <li>Produce creative designs for stationery, brand development, business cards, greeting cards, and website assets</li>
+              </ol>
+              <p><span class="techUsed">Technologies and tools used: </span><span class="techDesc">Adobe Creative Suite including Photoshop, Illustrator, and InDesign, Squarespace, Wordpress</span></p>
               <hr>
             </div> <!-- Column close -->
           <!-- Education -->
             <div class="col-lg-12">
               <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-graduation-cap"></i></span> Education</h3>
-              <h4 class="backgroundInfo">Epicodus — Front End Development<span class="backgroundDate">2015-2017</span></h4>
+              <h4 class="backgroundInfo">Epicodus - Front End Development<span class="backgroundDate">2015-2017</span></h4>
               <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
               <hr>
-              <h4 class="backgroundInfo">University of Michigan — B.A. in Arabic and Islamic Studies<span class="backgroundDate">2005-2009</span></h4>
+              <h4 class="backgroundInfo">University of Michigan - B.A. in Arabic and Islamic Studies<span class="backgroundDate">2005-2009</span></h4>
               <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
-              <hr>
             </div> <!-- Column close -->
           </div> <!-- Panel body -->
         </div> <!-- Panel close -->
