--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-6 col-sm-12">
             <h1>Hi, I'm Rose.</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>I love to create, which is what brought me to web development. My professional background lies in technical support and graphic design, so I look forward to taking my skills to the next level at Epicodus. When I'm not designing or developing, I enjoy knitting, reading, cooking, eating bread, and gazing lovingly at my one-eyed at Izzy Goo.</p>
           </div> <!-- Column close -->
           <div class="col-lg-4 col-md-6 col-sm-12">
             <img src="img/rose.jpg" alt="Rose Sponseller" class="roseImg">
