Add information regarding projects

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
           <div class="panel-body">
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project 1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <h3>Furr-Ever Home Pet Shelter</h3>
+              <p>The Furr-Ever Home Pet Shelter is a site devoted to finding cats and dogs a new home. The site uses divs and floats to create columns.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML and CSS</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Project 2</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
+              <h3>Wikipedia Rebuild</h3>
+              <p>The goal of the was to rebuild the Wikipedia homepage from scratch. Bootstrap was utilized to put the content within a grid.</p>
+              <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Bootstrap</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -92,7 +92,7 @@
                 <li>Assisted customers in a wide range of topics (website set up, domain management, HTML, CSS, RSS, SEO, typography, custom email, third party customizations)</li>
                 <li>Empowered customers with tools and expertise as they built confidence in using the product</li>
               </ol>
-              <p><span class="techUsed">Tools and technology used: </span><span class="techDesc">Squarespace, Chrome Developer Tools, HTML/CSS, CloudApp, Typinator, JIRA</span></p>
+              <p><span class="techUsed">Tools and technology used: </span><span class="techDesc">Squarespace, Chrome Developer Tools, HTML/CSS, CloudApp, JIRA</span></p>
               <hr>
               <h4 class="backgroundInfo">Freelance Graphic Design<span class="backgroundDate">2013-present</span></h4>
               <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg">
@@ -100,7 +100,7 @@
                 <li>Create mockups for print and web projects to present to clients in a timely and friendly fashion</li>
                 <li>Produce creative designs for stationery, brand development, business cards, greeting cards, and website assets</li>
               </ol>
-              <p><span class="techUsed">Technologies and tools used: </span><span class="techDesc">Adobe Creative Suite including Photoshop, Illustrator, and InDesign, Squarespace, Wordpress</span></p>
+              <p><span class="techUsed">Technologies and tools used: </span><span class="techDesc">Adobe Creative Suite including Photoshop, Illustrator, and InDesign, HTML/CSS, Squarespace, Wordpress</span></p>
               <hr>
             </div> <!-- Column close -->
           <!-- Education -->
