Adjust navbar colors

--- a/index.html
+++ b/index.html
@@ -46,29 +46,29 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="col-lg-6 col-md-6 col-sm-12">
-              <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
+              <img src="img/pet_shelter.png" alt="Furrever Home Pet Shelter" class="projectImg">
               <h3><a href="https://avocadobravado.github.io/pet-shelter/">Furr-Ever Home Pet Shelter</a></h3>
               <p>The Furr-Ever Home Pet Shelter is a site devoted to finding cats and dogs a new home. The site uses divs and floats to create columns.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Google Fonts</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
-              <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Wikipedia Rebuild</h3>
+              <img src="img/wikipedia.jpg" alt="Wikipedia Rebuild" class="projectImg">
+              <h3><a href="https://avocadobravado.github.io/wikipedia-rebuild/">Wikipedia Rebuild</a></h3>
               <p>The goal of the project was to rebuild the Wikipedia homepage from scratch. Bootstrap was utilized to put the content within a grid.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Bootstrap</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
-              <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3><a href="https://avocadobravado.github.io/crazy-cat-lady-island/">Crazy Cat Lady Island</a></h3>
-              <p>Crazy Cat Island is a HTML/CSS only site that has a main homepage, multiple homepages within it. Its Git repo also features a README with instructions on how to access another branch of the project.</p>
+              <img src="img/catlady.jpg" alt="Crazy Cat Lady Island" class="projectImg">
+              <h3><a href="https://github.com/avocadobravado/crazy-cat-lady-island">Crazy Cat Lady Island</a></h3>
+              <p>Crazy Cat Island is a website with multiple pages. Its Git repo also features a README with info on how to access another branch of the project.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Git</span></p>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
-              <img src="img/pet_shelter.png" alt="Project #1" class="projectImg">
-              <h3>Boring Lecture</h3>
-              <p></p>
+              <img src="img/boring-lecture.jpg" alt="Boring Lecture" class="projectImg">
+              <h3><a href="https://avocadobravado.github.io/boring-lecture/">Boring Lecture</a></h3>
+              <p>Who says lectures need to be boring? This project was created with HTML and CSS to practice using divs.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Google Fonts</span></p>
             </div> <!-- Column close -->
           </div> <!-- Panel body -->
@@ -95,7 +95,7 @@
               <p><span class="techUsed">Tools and technology used: </span><span class="techDesc">Squarespace, Chrome Developer Tools, HTML/CSS, CloudApp, Typinator, JIRA</span></p>
               <hr>
               <h4 class="backgroundInfo">Freelance Graphic Design<span class="backgroundDate">2013-present</span></h4>
-              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg">
+              <img src="img/freelance.jpg" alt="Freelance Graphic Designer" class="backgroundImg">
               <ol>
                 <li>Create mockups for print and web projects to present to clients in a timely and friendly fashion</li>
                 <li>Produce creative designs for stationery, brand development, business cards, greeting cards, and website assets</li>
@@ -106,13 +106,8 @@
           <!-- Education -->
             <div class="col-lg-12">
               <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-graduation-cap"></i></span> Education</h3>
-              <h4 class="backgroundInfo">Epicodus - Front End Development<span class="backgroundDate">2015-2017</span></h4>
-              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
-              <hr>
+              <h4 class="backgroundInfo">Epicodus - Front End Development<span class="backgroundDate">2017</span></h4>
               <h4 class="backgroundInfo">University of Michigan - B.A. in Arabic and Islamic Studies<span class="backgroundDate">2005-2009</span></h4>
-              <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p><span class="techUsed">Technologies used: </span><span class="techDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span></p>
             </div> <!-- Column close -->
           </div> <!-- Panel body -->
         </div> <!-- Panel close -->
