Adjust navbar stylings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <!-- Navbar brand -->
       <div class="navbar-header">
-        <a href="#" class="navbar-brand"><i class="fa fa-hand-spock-o fa-2x"></i> Rose Sponseller</a>
+        <a href="index.html" class="navbar-brand"><i class="fa fa-hand-spock-o fa-2x"></i> Rose Sponseller</a>
       </div>
       <!-- Right side of navbar -->
         <ul class="nav navbar-nav navbar-right">
