Add Google Font stylings to CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         </ul>
       </div> <!--Container close -->
     </nav>
-
     <!--Jumbotron-->
     <div class="jumbotron">
       <div class="container">
@@ -39,7 +38,6 @@
         </div><!-- Row close -->
       </div> <!-- Container close -->
     </div> <!-- Jumbotron close -->
-
     <!-- Projects Panel -->
     <div class="container">
     <h2 class="secondary">Week One Projects</h2>
@@ -48,27 +46,27 @@
           <div class="panel-body">
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/pet_shelter.png" alt="Furrever Home Pet Shelter" class="projectImg">
-              <h3><a href="https://avocadobravado.github.io/pet-shelter/">Furr-Ever Home Pet Shelter</a></h3>
+              <h3><a href="https://avocadobravado.github.io/pet-shelter/">Furr-Ever Home Pet Shelter &rarr;</a></h3>
               <p>The Furr-Ever Home Pet Shelter is a site devoted to finding cats and dogs a new home. The site uses divs and floats to create columns.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Google Fonts</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/wikipedia.jpg" alt="Wikipedia Rebuild" class="projectImg">
-              <h3><a href="https://avocadobravado.github.io/wikipedia-rebuild/">Wikipedia Rebuild</a></h3>
+              <h3><a href="https://avocadobravado.github.io/wikipedia-rebuild/">Wikipedia Rebuild &rarr;</a></h3>
               <p>The goal of the project was to rebuild the Wikipedia homepage from scratch. Bootstrap was utilized to put the content within a grid.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Bootstrap</span></p>
               <hr>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/catlady.jpg" alt="Crazy Cat Lady Island" class="projectImg">
-              <h3><a href="https://github.com/avocadobravado/crazy-cat-lady-island">Crazy Cat Lady Island</a></h3>
+              <h3><a href="https://github.com/avocadobravado/crazy-cat-lady-island">Crazy Cat Lady Island &rarr;</a></h3>
               <p>Crazy Cat Island is a website with multiple pages. Its Git repo also features a README with info on how to access another branch of the project.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Git</span></p>
             </div> <!-- Column close -->
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img src="img/boring-lecture.jpg" alt="Boring Lecture" class="projectImg">
-              <h3><a href="https://avocadobravado.github.io/boring-lecture/">Boring Lecture</a></h3>
+              <h3><a href="https://avocadobravado.github.io/boring-lecture/">Boring Lecture &rarr;</a></h3>
               <p>Who says lectures need to be boring? This project was created with HTML and CSS to practice using divs.</p>
               <p><span class="techUsed">Technologies used: </span><span class="techDesc">HTML, CSS, Google Fonts</span></p>
             </div> <!-- Column close -->
@@ -76,7 +74,6 @@
         </div> <!-- Panel close -->
       </div> <!-- Row close -->
     </div> <!--Container close -->
-
     <!-- Background panel -->
     <div class="container">
     <h2 class="secondary">My Background</h2>
