Remove mentions of my real last name, as this will not be used as an official portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
     crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <title>Rose Sponseller Portfolio</title>
+    <title>Rose Lastname Portfolio</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -18,14 +18,14 @@
     <div class="container-fluid">
       <!-- Navbar brand -->
       <div class="navbar-header">
-        <a href="index.html" class="navbar-brand"><i class="fa fa-hand-spock-o fa-2x"></i> Rose Sponseller</a>
+        <a href="index.html" class="navbar-brand"><i class="fa fa-hand-spock-o fa-2x"></i> Rose Lastname</a>
       </div>
       <!-- Right side of navbar -->
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="nav-link" href="mailto:rosesponseller@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
-          <li><a class="nav-link" href="http://github.com/avocadobravado"><i class="fa fa-github fa-2x"></i></a></li>
-          <li><a class="nav-link" href="http://www.ravelry.com/people/rosesponseller"><i class="fa fa-ravelry fa-2x"></i></a></li>
-          <li><a class="nav-link" href="http://www.instagram.com/rosesponseller"><i class="fa fa-instagram fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.google.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.google.com"><i class="fa fa-github fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.google.com"><i class="fa fa-ravelry fa-2x"></i></a></li>
+          <li><a class="nav-link" href="http://www.google.com"><i class="fa fa-instagram fa-2x"></i></a></li>
         </ul>
       </div> <!--Container close -->
     </nav>
@@ -38,7 +38,7 @@
             <p>I love to create, which is what brought me to web development. My professional background lies in technical support and graphic design, so I look forward to taking my skills to the next level at Epicodus. When I'm not designing or developing, I enjoy knitting, reading, cooking, eating bread, and gazing lovingly at my one-eyed cat Izzy Goo.</p>
           </div> <!-- Column close -->
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="img/rose.jpg" alt="Rose Sponseller" class="roseImg">
+            <img src="img/rose.jpg" alt="Rose Lastname" class="roseImg">
           </div> <!-- Column close -->
         </div><!-- Row close -->
       </div> <!-- Container close -->
@@ -88,7 +88,7 @@
             <div class="col-lg-12">
             <!-- Work experience -->
               <h3 class="bg-h3"><span class="fontAwesome"><i class="fa fa-briefcase"></i></span> Work Experience</h3>
-              <h4 class="backgroundInfo">Squarespace - Technical Support<span class="backgroundDate">2015-2017</span></h4>
+              <h4 class="backgroundInfo">Company - Technical Support<span class="backgroundDate">2015-2017</span></h4>
               <img src="img/squarespace.png" alt="Squarespace" class="backgroundImg"><p>
               <ol>
                 <li>Provided high level of technical support and web design assistance via email and concurrent  chats.</li>
